--- a/greetings.html
+++ b/greetings.html
@@ -37,7 +37,7 @@
               }
               return counter;
             }
-            console.log(counterFun(101))
+            console.log(counterFun(100))
             // Q4 - nameAge
             let nameAge = (name, age) =>{
               console.log("Hello " + name);
@@ -45,10 +45,15 @@
             }
             console.log(nameAge("Sydney", 23));
             // Q5 - printOnly
-            let printOnly =  =>{
+            let printOnly = () =>{
               console.log("printing");
             }
             console.log(printOnly());
+            // Q5 - Sum
+            let sum = (num1, num2) =>{
+              return num1 + num2;
+            }
+            console.log(sum(5,20));
 
         </script>
       </body>
