--- a/test_home_page/index.html
+++ b/test_home_page/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Cypress</h1>
+    <h1 data-cy="main-header">Hello Cypress</h1>
     
 </body>
 </html>
