Started editing the html file and building js file

--- a/calculator.html
+++ b/calculator.html
@@ -15,32 +15,34 @@
             <input id="sum" type="text" value="0">
         </form>
         <br>
-        <!-- Row One -->
-        <button id="one">1</button>
-        <button id="two">2</button>
-        <button id="three">3</button>
-        <button id="divide">÷</button>
-        <br>
-        <!-- Row Two -->
-        <button id="four">4</button>
-        <button id="five">5</button>
-        <button id="six">6</button>
-        <button id="multiply">x</button>
-        <br>
-        <!-- Row Three -->
-        <button id="seven">7</button>
-        <button id="eight">8</button>
-        <button id="nine">9</button>
-        <button id="subtract">-</button>
-        <br>
-        <!-- Row Four -->
-        <button id="decimal">.</button>
-        <button id="zero">0</button>
-        <button id="clear">C</button>
-        <button id="add">+</button>
-        <br>
-        <!-- Row Five -->
-        <button id="equals" style="width: 8%">=</button>
-        <button id="clear-all">AC</button>
+        <div class="calculator-keys">
+            <!-- Row One -->
+            <button type="button" value="one">1</button>
+            <button type="button" value="two">2</button>
+            <button type="button" value="three">3</button>
+            <button type="button" value="divide">÷</button>
+            <br>
+            <!-- Row Two -->
+            <button type="button" value="four">4</button>
+            <button type="button" value="five">5</button>
+            <button type="button" value="six">6</button>
+            <button type="button" value="multiply">x</button>
+            <br>
+            <!-- Row Three -->
+            <button type="button" value="seven">7</button>
+            <button type="button" value="eight">8</button>
+            <button type="button" value="nine">9</button>
+            <button type="button" value="subtract">-</button>
+            <br>
+            <!-- Row Four -->
+            <button type="button" value="decimal">.</button>
+            <button type="button" value="zero">0</button>
+            <button type="button" value="clear">C</button>
+            <button type="button" value="add">+</button>
+            <br>
+            <!-- Row Five -->
+            <button type="button" value="equals" style="width: 8%">=</button>
+            <button type="button" value="clear-all">AC</button>
+        </div>
     </body>
 </html>
